--- a/roles/app-jenkins/templates/ingress.yml
+++ b/roles/app-jenkins/templates/ingress.yml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     kubernetes.io/tls-acme: 'true'
-    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
+    certmanager.k8s.io/cluster-issuer: letsencrypt-issuer
 spec:
   tls:
   - hosts:
