--- a/roles/app-keycloak/templates/ingress.yml
+++ b/roles/app-keycloak/templates/ingress.yml
@@ -4,7 +4,7 @@ metadata:
   name: keycloak
   annotations:
     kubernetes.io/ingress.class: nginx
-    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
+    certmanager.k8s.io/cluster-issuer: letsencrypt-issuer
 spec:
   tls:
     - secretName: traefik-cert
