--- a/roles/app-nexus/templates/ingress-registry.yml
+++ b/roles/app-nexus/templates/ingress-registry.yml
@@ -4,7 +4,7 @@ metadata:
   name: registry
   annotations:
     kubernetes.io/ingress.class: nginx
-    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
+    certmanager.k8s.io/cluster-issuer: letsencrypt-issuer
     ingress.kubernetes.io/proxy-body-size: "50m"
     nginx.org/proxy-connect-timeout: "30s"
     nginx.org/proxy-read-timeout: "20s"
