--- a/roles/app-nexus/templates/ingress.yml
+++ b/roles/app-nexus/templates/ingress.yml
@@ -4,7 +4,7 @@ metadata:
   name: nexus
   annotations:
     kubernetes.io/ingress.class: nginx
-    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
+    certmanager.k8s.io/cluster-issuer: letsencrypt-issuer
 spec:
   tls:
   - hosts:
