--- a/roles/app-sonarqube/templates/ingress.yml
+++ b/roles/app-sonarqube/templates/ingress.yml
@@ -4,7 +4,7 @@ metadata:
   name: sonarqube
   annotations:
     kubernetes.io/ingress.class: nginx
-    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
+    certmanager.k8s.io/cluster-issuer: letsencrypt-issuer
     traefik.frontend.rule.type: PathPrefixStrip
 spec:
   tls:
