--- a/roles/cert-manager/tasks/main.yml
+++ b/roles/cert-manager/tasks/main.yml
@@ -21,10 +21,10 @@
   register: issuer_check
 
 - name: Delete Issuer
-  command: kubectl delete issuer letsencrypt-prod 
+  command: kubectl delete issuer letsencrypt-issuer
   become: yes
   become_user: root
-  when: "'letsencrypt-prod' in issuer_check.stdout"
+  when: "'letsencrypt-issuer' in issuer_check.stdout"
 
 - name: Create Issuer
   command: kubectl apply -f  /tmp/issuer.yaml 
