--- a/roles/app-jenkins-x/templates/pv.yml
+++ b/roles/app-jenkins-x/templates/pv.yml
@@ -7,6 +7,9 @@ spec:
     storage: 30Gi
   accessModes:
   - ReadWriteOnce
+  claimRef:
+    namespace: jx
+    name: jenkins
   nfs:
     path: /zpool-126262/WWWJENKINSX
     server: "{{groups['nfs-master'][0] }}"
@@ -22,10 +25,14 @@ spec:
     storage: 8Gi
   accessModes:
   - ReadWriteOnce
+  claimRef:
+    namespace: jx
+    name: jenkins-x-chartmuseum
   nfs:
-    path: /zpool-126262/WWWJENKINSXCHARTMUSEUM
+    path: /zpool-126262/WWWJENKINSXCHARTMSM
     server: "{{groups['nfs-master'][0] }}"
   persistentVolumeReclaimPolicy: Recycle
+
 ---
 apiVersion: v1
 kind: PersistentVolume
@@ -36,10 +43,14 @@ spec:
     storage: 100Gi
   accessModes:
   - ReadWriteOnce
+  claimRef:
+    namespace: jx
+    name: jenkins-x-docker-registry
   nfs:
-    path: /zpool-126262/WWWJENKINSXDOCKERREGISTRY
+    path: /zpool-126262/WWWJENKINSXDOCKERREG
     server: "{{groups['nfs-master'][0] }}"
   persistentVolumeReclaimPolicy: Recycle
+
 ---
 apiVersion: v1
 kind: PersistentVolume
@@ -50,10 +61,14 @@ spec:
     storage: 30Gi
   accessModes:
   - ReadWriteOnce
+  claimRef:
+    namespace: jx
+    name: jenkins-x-mongodb
   nfs:
     path: /zpool-126262/WWWJENKINSXMONGODB
     server: "{{groups['nfs-master'][0] }}"
   persistentVolumeReclaimPolicy: Recycle
+
 ---
 apiVersion: v1
 kind: PersistentVolume
@@ -64,7 +79,10 @@ spec:
     storage: 8Gi
   accessModes:
   - ReadWriteOnce
+  claimRef:
+    namespace: jx
+    name: jenkins-x-nexus
   nfs:
-    path: /zpool-126262/WWWJENKINSXNEXUS
+    path: /zpool-126262/WWWJENKINSXNEXUS/app
     server: "{{groups['nfs-master'][0] }}"
   persistentVolumeReclaimPolicy: Recycle
