--- a/roles/ingress-nginx/templates/patch.yml
+++ b/roles/ingress-nginx/templates/patch.yml
@@ -1,8 +1,8 @@
 data:
-  body-size: 64m
-  client-max-body-size: 100m
+  body-size: 0
+  client-max-body-size: 200m
   hsts-include-subdomains: "false"
-  proxy-body-size: 100m
+  proxy-body-size: 200m
   proxy-buffering: "on"
   proxy-connect-timeout: "15"
   proxy-read-timeout: "600"
