--- a/roles/app-grafana/templates/ingress.yml
+++ b/roles/app-grafana/templates/ingress.yml
@@ -1,20 +1,20 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: metrics-server
+  name: grafana
   annotations:
     kubernetes.io/ingress.class: nginx
     certmanager.k8s.io/cluster-issuer: letsencrypt-issuer
 spec:
   tls:
   - hosts:
-    - metrics-server.{{domaine}}
+    - grafana.{{domaine}}
     secretName: certificate
   rules:
-  - host: metrics-server.{{domaine}}
+  - host: grafana.{{domaine}}
     http:
       paths:
       - path: /
         backend:
-          serviceName: metrics-server
-          servicePort: 443
+          serviceName: grafana
+          servicePort: 80
