--- a/roles/tool-helm/tasks/main.yml
+++ b/roles/tool-helm/tasks/main.yml
@@ -33,6 +33,12 @@
   become_user: root
   when: "'add-on-cluster-admin' not in clusterrolebinding_check.stdout"
 
+- name: Create Role Binding
+  kubectl create clusterrolebinding add-on-cluster-helm --clusterrole=cluster-admin --serviceaccount=default:default
+  become: yes
+  become_user: root
+  when: "'add-on-cluster-helm' not in clusterrolebinding_check.stdout"
+
 - name: Execute helm reset
   command: helm reset
   become: yes
