--- a/roles/dck-nexus/tasks/main.yml
+++ b/roles/dck-nexus/tasks/main.yml
@@ -13,8 +13,14 @@
 - name: Copy Nexus NGinx Conf File
   template:
     src: nginx.j2
-    dest: /etc/nginx/conf.d/jenkins.conf
+    dest: /etc/nginx/conf.d/nexus.conf
   become: true
+
+- name: Daemon Reload Nexus
+  systemd:
+    state: restarted
+    daemon_reload: yes
+    name: nexus
 
 - name: Start Nexus Service
   systemd:
@@ -23,3 +29,14 @@
     enabled: yes
   become: yes
   become_user: root
+
+- name: Create folder /etc/nexus
+  file:
+    path: /mnt/nexus
+    state: directory
+    mode: 0755
+  become: yes
+  become_user: root
+
+#- name: Mount /mnt/nexus
+#  command: mount /mnt/nexus
