--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -7,18 +7,34 @@
   become: yes
   become_user: root
 
-- name: "Install NGinx"
+- name: "Install epel-release"
   yum:
-    name: nginx
+    name: https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
     state: present
   become: yes
   become_user: root
 
-- selinux:
+- name: "Install NGinx"
+  yum:
+    name: nginx
+    state: installed
+  become: yes
+  become_user: root
+
+- name: "Install Certbot NGinx"
+  yum:
+    name: certbot-nginx
+    state: installed
+    disable_gpg_check: True
+  become: yes
+  become_user: root
+
+- name: "Disable Selinux"
+  selinux:
     state: disabled
   become: yes
   become_user: root
-  
+
 - name: Start NGinx Service
   systemd:
     name: nginx
@@ -27,3 +43,6 @@
   become: yes
   become_user: root
 
+- command: firewall-cmd --zone=public --permanent --add-service=http
+  become: yes
+  become_user: root
