--- a/roles/dck-nexus/tasks/main.yml
+++ b/roles/dck-nexus/tasks/main.yml
@@ -16,6 +16,12 @@
     dest: /etc/nginx/conf.d/nexus.conf
   become: true
 
+- name: Copy Nexus NGinx Conf File
+  template:
+    src: nginx-registry.j2
+    dest: /etc/nginx/conf.d/registry.conf
+  become: true
+
 - name: Daemon Reload Nexus
   systemd:
     state: restarted
