--- a/roles/app-nexus/templates/pv.yml
+++ b/roles/app-nexus/templates/pv.yml
@@ -8,6 +8,6 @@ spec:
   accessModes:
   - ReadWriteOnce
   nfs:
-    path: /zpool-126262/WWWNEXUS
+    path: /zpool-126262/WWWNEXUS/nexus
     server: "{{groups['nfs-master'][0] }}"
   persistentVolumeReclaimPolicy: Recycle
