--- a/roles/app-secrets/templates/secret.yml
+++ b/roles/app-secrets/templates/secret.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{item.secret}}
+  namespace: {{item.namespace}}
 type: Opaque
 data:
   {{item.key}}: {{item.value}}
