--- a/roles/cert-manager/templates/certificate.yaml
+++ b/roles/cert-manager/templates/certificate.yaml
@@ -6,17 +6,17 @@ spec:
   secretName: certificate
   issuerRef:
     name: letsencrypt-issuer
-    kind: ClusterIssuer
-  commonName: {{certificates | first}}
-  dnsNames: 
-{% for certificate in certificates %}      
-    - {{certificate}}
-{% endfor %}
-  acme:
-    config:
-    - http01:
-        ingressClass: nginx
-      domains: 
-{% for certificate in certificates %}      
-        - {{certificate}}
-{% endfor %}
+    kind: Issuer
+  commonName: {{certificates | selectattr("namespace", "match", namespace_item) | map(attribute='name') | first }}
+  dnsNames:
+  {% for certificate in certificates if certificate.namespace == namespace_item %}
+  - {{certificate.name}}
+  {% endfor %}
+acme:
+  config:
+  - http01:
+      ingressClass: nginx
+    domains:
+  {% for certificate in certificates if certificate.namespace == namespace_item  %}
+    - {{certificate.name}}
+  {% endfor %}
