--- a/inventories/prod/group_vars/all/all.yaml
+++ b/inventories/prod/group_vars/all/all.yaml
@@ -2,12 +2,12 @@ domaine: k8.wildwidewest.xyz
 
 registry: registry.{{domaine}}
 
-acme: https://acme-v02.api.letsencrypt.org/directory
-#acme: https://acme-staging-v02.api.letsencrypt.org/directory
+#acme: https://acme-v02.api.letsencrypt.org/directory
+acme: https://acme-staging-v02.api.letsencrypt.org/directory
 
 nfs_mounts:
 - { remote: "10.16.103.9:/zpool-126262/WWWJENKINS",   local: /mnt/jenkins}
-- { remote: "10.16.103.9:/zpool-126262/WWWGRAV",   local: /mnt/grav}
+- { remote: "10.16.103.9:/zpool-126262/WWWGRAV",      local: /mnt/grav}
 - { remote: "10.16.103.9:/zpool-126262/WWWNEXUS",     local: /mnt/nexus}
 - { remote: "10.16.103.9:/zpool-126262/WWWKEYCLOAK",  local: /mnt/keycloak}
 - { remote: "10.16.103.9:/zpool-126262/WWWSONARQUBE", local: /mnt/sonarqube}
@@ -20,13 +20,13 @@ kubeadm:
     options:
 
 certificates:
-- jenkins.{{domaine}}
-- nexus.{{domaine}}
-- sonarqube.{{domaine}}
-- keycloak.{{domaine}}
-- meltingpoc.{{domaine}}
-- parcours-integration.{{domaine}}
-- recyclette.{{domaine}}
-- wallboard.{{domaine}}
-- wallboard-back.{{domaine}}
-- bus.wallboard.{{domaine}}
+- { namespace: 'default', name: "jenkins.{{domaine}}" }
+- { namespace: 'default', name: "nexus.{{domaine}}" }
+- { namespace: 'default', name: "sonarqube.{{domaine}}" }
+- { namespace: 'default', name: "keycloak.{{domaine}}" }
+- { namespace: 'dev', name: "meltingpoc-dev.{{domaine}}" }
+- { namespace: 'dev', name: "parcours-integration-dev.{{domaine}}" }
+- { namespace: 'dev', name: "recyclette-dev.{{domaine}}" }
+- { namespace: 'dev', name: "wallboard-dev.{{domaine}}" }
+- { namespace: 'dev', name: "wallboard-back-dev.{{domaine}}" }
+- { namespace: 'dev', name: "bus.wallboard-dev.{{domaine}}" }
