--- a/inventories/prod/group_vars/all/all.yaml
+++ b/inventories/prod/group_vars/all/all.yaml
@@ -2,8 +2,8 @@ domaine: k8.wildwidewest.xyz
 
 registry: registry.{{domaine}}
 
-#acme: https://acme-v02.api.letsencrypt.org/directory
-acme: https://acme-staging-v02.api.letsencrypt.org/directory
+acme: https://acme-v02.api.letsencrypt.org/directory
+#acme: https://acme-staging-v02.api.letsencrypt.org/directory
 
 nfs_mounts:
 - { remote: "10.16.103.9:/zpool-126262/WWWJENKINS",   local: /mnt/jenkins}
