--- a/roles/app-keycloak/templates/ingress.yml
+++ b/roles/app-keycloak/templates/ingress.yml
@@ -7,7 +7,9 @@ metadata:
     certmanager.k8s.io/cluster-issuer: letsencrypt-issuer
 spec:
   tls:
-    - secretName: traefik-cert
+  - hosts:
+    - keycloak.{{domaine}}
+    secretName: certificate
   rules:
   - host: keycloak.{{domaine}}
     http:
