--- a/roles/tool-helm/tasks/main.yml
+++ b/roles/tool-helm/tasks/main.yml
@@ -54,3 +54,8 @@
   command: helm repo add meltingpoc-charts https://softeamouest.github.io/charts/
   become: yes
   become_user: root
+
+- name: Add Helm Repo
+  command: helm repo add helloworld-charts https://helloworld-k8s.github.io/charts/
+  become: yes
+  become_user: root
