--- a/roles/app-secrets/tasks/create-docker-secret.yml
+++ b/roles/app-secrets/tasks/create-docker-secret.yml
@@ -1,5 +1,5 @@
 - command: "kubectl get secret"
   register: command_result
 
-- command: "kubectl create secret docker-registry {{item.name}} --docker-server={{item.server}} --docker-username={{item.username}} --docker-password={{item.password}} --docker-email={{item.email}}"
+- command: "kubectl create secret docker-registry {{item.name}} --docker-server={{item.server}} --docker-username={{item.username}} --docker-password={{item.password}} --docker-email={{item.email}} -n {{item.namespace}}"
   when: 'item.name not in command_result.stdout'
