--- a/roles/app-keycloak/templates/deployment.yml
+++ b/roles/app-keycloak/templates/deployment.yml
@@ -11,7 +11,7 @@ spec:
     spec:
       containers:
       - name: postgres
-        image: postgres
+        image: postgres:11.1
         ports:
         - containerPort: 5432
         volumeMounts:
@@ -27,7 +27,7 @@ spec:
         - name: PGDATA
           value: /var/lib/postgresql/data/pgdata
       - name: keycloak
-        image: jboss/keycloak
+        image: jboss/keycloak:4.6.0.Final
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
