--- a/roles/app-nexus/templates/ingress-registry.yml
+++ b/roles/app-nexus/templates/ingress-registry.yml
@@ -12,7 +12,7 @@ metadata:
 spec:
   tls:
   - hosts:
-    - nexus.{{domaine}}
+    - registry.{{domaine}}
     secretName: certificate
   rules:
   - host: registry.{{domaine}}
