--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -1,8 +1,49 @@
+- file:
+    path: /etc/yum.repos.d/docker-ce.repo
+    state: absent
+  become: yes
+  become_user: root
+
+
+- name: Ensure a list of packages installed
+  yum:
+    name: "{{ packages }}"
+    state: latest
+    update_cache: True
+  vars:
+    packages:
+    - docker
+    - yum-utils
+    - device-mapper-persistent-data
+    - lvm2
+  become: yes
+  become_user: root
+
+#- name: Add repository
+#  yum_repository:
+#    name: docker-ce
+#    description: Docker CE
+#    baseurl: https://download.docker.com/linux/centos/docker-ce.repo
+#
+#- name: Install Docker
+#  yum:
+#    name: docker-ce-18.06.1.ce
+#    state: present
+#  become: yes
+#  become_user: root
+#
 - name: Create folder /etc/docker
   file:
     path: /etc/docker
     state: directory
     mode: 0755
+  become: yes
+  become_user: root
+
+- file:
+    path: /etc/systemd/system/docker.service.d
+    mode: 0755
+    state: directory
   become: yes
   become_user: root
 
@@ -14,17 +55,10 @@
   become_user: root
   when: registry is defined
 
-- name: Configure /etc/sysconfig/docker
+- name: Configure Sysconfig Docker
   template:
-    src: templates/sysconfig_docker
+    src: templates/etc_sysconfig_docker
     dest: /etc/sysconfig/docker
-  become: yes
-  become_user: root
-  
-- name: Install Docker
-  yum:
-    name: docker
-    state: present
   become: yes
   become_user: root
 
