--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -1,37 +1,3 @@
-- file:
-    path: /etc/yum.repos.d/docker-ce.repo
-    state: absent
-  become: yes
-  become_user: root
-
-
-- name: Ensure a list of packages installed
-  yum:
-    name: "{{ packages }}"
-    state: latest
-    update_cache: True
-  vars:
-    packages:
-    - docker
-    - yum-utils
-    - device-mapper-persistent-data
-    - lvm2
-  become: yes
-  become_user: root
-
-#- name: Add repository
-#  yum_repository:
-#    name: docker-ce
-#    description: Docker CE
-#    baseurl: https://download.docker.com/linux/centos/docker-ce.repo
-#
-#- name: Install Docker
-#  yum:
-#    name: docker-ce-18.06.1.ce
-#    state: present
-#  become: yes
-#  become_user: root
-#
 - name: Create folder /etc/docker
   file:
     path: /etc/docker
@@ -62,6 +28,20 @@
   become: yes
   become_user: root
 
+- name: Ensure a list of packages installed
+  yum:
+    name: "{{ packages }}"
+    state: latest
+    update_cache: True
+  vars:
+    packages:
+    - docker
+    - yum-utils
+    - device-mapper-persistent-data
+    - lvm2
+  become: yes
+  become_user: root
+
 - name: Create Groupe Docker
   group:
     name: docker
@@ -72,7 +52,7 @@
 - name: Start Docker Service
   systemd:
     name: docker
-    state: started
+    state: restarted
     enabled: yes
   become: yes
   become_user: root
