--- a/roles/k8s/tasks/main.yml
+++ b/roles/k8s/tasks/main.yml
@@ -34,44 +34,30 @@
   become: yes
   become_user: root
 
-- name: "Update System"
-  shell: yum update -y
+- name: Install kubelet
+  yum:
+    name: kubelet
+    state: latest
+    update_cache: yes
+    allow_downgrade: true
   become: yes
   become_user: root
 
-- name: "Install kubelet"
-  shell: yum install -y kubelet-1.11.5-0 kubeadm-1.11.5-0 kubectl-1.11.5-0 ipvsadm  --disableexcludes=kubernetes
+- name: Install ipvsadm
+  yum:
+    name: ipvsadm
+    state: latest
+    update_cache: yes
   become: yes
   become_user: root
 
-- selinux:
-    policy: targeted
-    state: permissive
+- name: Install kubeadm
+  yum:
+    name: kubeadm
+    state: present
   become: yes
   become_user: root
 
-- name:
-  shell: sed -i 's/^SELINUX=enforcing$/SELINUX=permissive/' /etc/selinux/config
-  become: yes
-  become_user: root
-
-# wait for ansible 2.7
-#- name: Install kubelet
-#  yum:
-#    name: "{{ packages }}"
-#    state: latest
-#    update_cache: yes
-#    allow_downgrade: true
-#    disable_excludes: kubernetes
-#  vars:
-#    packages:
-#    - kubelet
-#    - kubeadm
-#    - kubectl
-#    - ipvsadm
-#  become: yes
-#  become_user: root
-#
 - name: Start kubelet
   systemd:
     name: kubelet
