--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -21,10 +21,18 @@
   become_user: root
   when: registry is defined
 
-- name: Configure Sysconfig Docker
-  template:
-    src: templates/etc_sysconfig_docker
-    dest: /etc/sysconfig/docker
+
+- shell: yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
+
+- name: Ensure a list of packages are not installed
+  yum:
+    name: "{{ packages }}"
+    state: absent
+    update_cache: True
+  vars:
+    packages:
+    - docker
+    - docker-common
   become: yes
   become_user: root
 
@@ -35,10 +43,10 @@
     update_cache: True
   vars:
     packages:
-    - docker
+    - docker-ce-18.06.1.ce
     - yum-utils
-    - device-mapper-persistent-data
-    - lvm2
+#    - device-mapper-persistent-data
+#    - lvm2
   become: yes
   become_user: root
 
@@ -54,5 +62,6 @@
     name: docker
     state: restarted
     enabled: yes
+    daemon_reload: yes
   become: yes
   become_user: root
